Name: record
Version: 1.0.0
Cabal-Version: >=1.8.0.2
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2014 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/Gabriel439/Haskell-Record-Library/issues
Synopsis: Command line utility to record command environments and output
Description: This package creates the @record@ executable that you can use to
  wrap other commands to record the following information in @~/.record@:
  .
  * The current @git@ branch
  .
  * The current @git@ SHA
  .
  * The current @git@ diff
  .
  * The current @hostname@
  .
  * The current directory
  .
  * The current date and time
  .
  * The current user
  .
  * All command output
  .
  To use this tool, just prefix your shell commands with @record@
Category: Control, Concurrency
Source-Repository head
    Type: git
    Location: https://github.com/Gabriel439/Haskell-Record-Library

Executable record
    Hs-Source-Dirs: src
    Build-Depends:
        base             >= 4       && < 5   ,
        async            >= 2.0.1.0 && < 2.1 ,
        process          >= 1.0.1.1 && < 1.3 ,
        system-fileio    >= 0.2.1   && < 0.4 ,
        system-filepath  >= 0.3.1   && < 0.5
    Main-Is: Record.hs
    GHC-Options: -O2 -Wall
